update story for version 2.0.0

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Elm Narrative Engine</title>
   </head>
-  <body class="theme--dark">
+  <body class="">
   </body>
 </html>
