switch from marbles story to little red riding hood

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charSet="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Elm Narrative Engine</title>
+    <title>Little Red Riding Hood - an interactive story</title>
   </head>
   <body class="">
   </body>
